--- a/server/web/layout.html
+++ b/server/web/layout.html
@@ -43,7 +43,7 @@
 <body>
 
 <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
-    <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">ML Catalog</a>
+    <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="/">ML Catalog</a>
 
     <ul class="navbar-nav px-3">
         <li class="nav-item text-nowrap">
