--- a/server/web/layout.html
+++ b/server/web/layout.html
@@ -44,24 +44,14 @@
 
 <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
     <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="/">ML Catalog</a>
-
-    <ul class="navbar-nav px-3">
-        <li class="nav-item text-nowrap">
-        </li>
-    </ul>
+   
 </nav>
 
-<div class="container-fluid" id="app">
+<div class="container" id="app">
     <div class="row">
-        <nav class="col-sm-3 col-md-2 d-none d-md-block bg-light sidebar">
-            <div class="sidebar-sticky">
 
 
-
-            </div>
-        </nav>
-
-        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
+        <main role="main" class="col">
             {{ template "content" . }}
 
             <footer>
