--- a/server/web/view_dashboard/content.html
+++ b/server/web/view_dashboard/content.html
@@ -44,14 +44,22 @@
 
 
     <h1 class="h2">Audit Log</h1>
+
+        <div class="table-responsive">
+
     <table class="table table-sm table-bordered">
         {{range .Audit}}
             <tr class="table-{{$.Site.Fmt.ActivityLevel .Level}}">
+                <td>
 
-                <td><a href="{{$.Site.Url.ViewDataset .ProjectId .DatasetId}}">{{.ProjectId}}/{{.DatasetId}}</a> {{$.Site.Fmt.Timestamp .Timestamp}}</td>
-                <td><pre>{{.MultilineText}}</pre></td>
+                    <a href="{{$.Site.Url.ViewDataset .ProjectId .DatasetId}}">{{.ProjectId}}/{{.DatasetId}}</a>
+                    <span class="float-right">{{$.Site.Fmt.Timestamp .Timestamp}}</span>
 
+<br/>
+                <code>{{.MultilineText}}</code>
+                </td>
             </tr>
+
         {{else}}
             <tr class="table-info">
                 <td>Audit log is empty</td>
@@ -60,6 +68,7 @@
         {{end}}
 
     </table>
+        </div>
 {{end}}
 
 
