--- a/server/web/view_dataset/content.html
+++ b/server/web/view_dataset/content.html
@@ -42,8 +42,11 @@
                 <table class="table table-sm table-bordered">
                     {{range .Audit}}
                         <tr class="table-{{$.Site.Fmt.ActivityLevel .Level}}">
-                            <td>{{$.Site.Fmt.Timestamp .Timestamp}}</td>
-                            <td><pre>{{.MultilineText}}</pre></td>
+                            <td> <span class="float-right">{{$.Site.Fmt.Timestamp .Timestamp}}</span>
+                            <br/>
+                                <code>{{.MultilineText}}</code>
+                            </td>
+                            
 
                         </tr>
                     {{else}}
